bug 1481079, Shadow DOM hosts should be focusable, r=mrbkap