dom/base/nsFocusManager.h
@@ -453,8 +453,11 @@ protected:
    * Host and Slot elements need to be handled as if they had tabindex 0 even
    * when they don't have the attribute. This is a helper method to get the right
    * value for focus navigation.
+   * If aIsFocusable is passed, it is set to true if the element itself is
+   * focusable.
    */
-  int32_t HostOrSlotTabIndexValue(nsIContent* aContent);
+  int32_t HostOrSlotTabIndexValue(nsIContent* aContent,
+                                  bool* aIsFocusable = nullptr);
 
   /**
    * Retrieve the next tabbable element in scope owned by aOwner, using
